Don't whitespace wrap on the menu bar

--- a/src/components/NavBar/EXV6NavBar.styl
+++ b/src/components/NavBar/EXV6NavBar.styl
@@ -225,6 +225,7 @@ header.NavBar {
 
             .Menu-title {
                 font-size: font-size-big
+                white-space: nowrap;
             }
 
             .Menu-children {
@@ -331,6 +332,7 @@ header.NavBar {
             line-height: navbar-height;
             padding-left: 0.5rem;
             padding-right: 0.5rem;
+            white-space: nowrap;
             align-items: center;
         }
 
