Detect SGF game name to use as filename

--- a/src/components/SGFPasteModal/SGFPasteModal.styl
+++ b/src/components/SGFPasteModal/SGFPasteModal.styl
@@ -18,7 +18,7 @@
 .SGFPasteModal {
     width: 30rem;
     max-width: 100%;
-    height: 55vh
+    height: 55vh;
     max-height: 100%;
 
     .body {
@@ -31,5 +31,24 @@
         textarea {
             flex: 1;
         }
+
     }
+
+    .filename {
+        display: flex;
+
+        align-items: stretch;
+        justify-content: stretch;
+        align-content: stretch;
+
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+        padding-top: 0.5rem;
+
+        textarea {
+            flex: 1;
+            resize: none;
+        }
+    }
+
 }
