Fallback on player names for filename, basic sanitization

--- a/src/components/SGFPasteModal/SGFPasteModal.styl
+++ b/src/components/SGFPasteModal/SGFPasteModal.styl
@@ -48,6 +48,8 @@
         textarea {
             flex: 1;
             resize: none;
+            white-space: nowrap;
+            overflow-x: auto;
         }
     }
 
