Double the resolution of nation flags in games.
This is done by using the 32px asset, scaled down by 50%.

--- a/src/views/Game/Players.styl
+++ b/src/views/Game/Players.styl
@@ -152,6 +152,7 @@
             .player-flag {
                 top: 1rem;
                 left: 1rem;
+                transform-origin: 6px 10px;
             }
         }
     }
@@ -211,6 +212,8 @@
         display: inline-block;
         left: 3rem;
         top: 3rem;
+        transform: scale(0.5);
+        transform-origin: 4px 12px;
 
         .flag {
             vertical-align: bottom;
@@ -360,6 +363,7 @@
             top: unset;
             right: 0.1rem;
             bottom: -0.2rem;
+            transform-origin: 40px bottom;
         }
         .auto-resign-overlay {
             flex-direction: row;
