--- a/src/components/GobanLineSummary/GobanLineSummary.styl
+++ b/src/components/GobanLineSummary/GobanLineSummary.styl
@@ -20,8 +20,8 @@
     width: auto;
     max-width: max-content;
     overflow-x: auto;
-    margin-left: auto;
-    margin-right: auto;
+    //margin-left: auto;
+    //margin-right: auto;
 }
 
 .GobanLineSummary {
