Persuade spectators to log in

--- a/src/views/OnlineLeagueGame/OnlineLeagueGame.styl
+++ b/src/views/OnlineLeagueGame/OnlineLeagueGame.styl
@@ -20,4 +20,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    .unstarted-match {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        div {
+            margin-bottom: 2rem;
+        }
+    }
+
+    .membership-drive{
+        margin-top: 3rem;
+    }
 }
