Tidy up landing pages

--- a/src/components/Loading/Loading.styl
+++ b/src/components/Loading/Loading.styl
@@ -56,6 +56,12 @@ logo-spinner-svg = svg-load("../assets/ogslogo.svg");
             height: 4em;
         }
     }
+
+    &.slow {
+        .loading-spinner {
+            animation: logo-spin 5s linear infinite;
+        }
+    }
 }
 
 .LoadingPage {
