Start to move legend out of seek graph and combine with challenge filters

--- a/src/components/SeekGraph/SeekGraphLegend.styl
+++ b/src/components/SeekGraph/SeekGraphLegend.styl
@@ -15,5 +15,15 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-export * from "./SeekGraph";
-export * from "./SeekGraphLegend";
+ .seek-graph-legend {
+    canvas {
+        margin-left: 0.5rem;
+        width: 20px;
+        height: 10px;
+    }
+    span {
+        display: flex;
+    }
+    
+    
+}
