Tweak legend, add more variable palette colors

--- a/src/components/SeekGraph/SeekGraphLegend.styl
+++ b/src/components/SeekGraph/SeekGraphLegend.styl
@@ -17,12 +17,13 @@
 
  .seek-graph-legend {
     canvas {
-        margin-left: 0.5rem;
+        margin-right: 0.5rem;
         width: 20px;
         height: 10px;
     }
-    span {
-        display: flex;
+
+    td {
+        vertical-align: middle;
     }
     
     
