Better formatting on play page

--- a/src/components/SeekGraph/SeekGraphLegend.styl
+++ b/src/components/SeekGraph/SeekGraphLegend.styl
@@ -16,6 +16,8 @@
  */
 
  .seek-graph-legend {
+    margin: 1rem auto;
+    
     canvas {
         margin-right: 0.5rem;
         width: 20px;
@@ -23,6 +25,7 @@
     }
 
     td {
+        padding: 0 1rem;
         vertical-align: middle;
     }
     
