Add setting to hide/show seek graph

--- a/src/views/Play/Play.styl
+++ b/src/views/Play/Play.styl
@@ -19,6 +19,10 @@
     // here
     max-width: 1110px;
 
+    .play-column {
+        margin: 0 auto;
+    }
+
     .seek-graph-container {
         width: 100%;
         height: 22em;
