Improve time control update flow, add tests, keep "force system" behavior while maintaining purity of render functions

--- a/src/components/ChallengeModal/ChallengeModal.styl
+++ b/src/components/ChallengeModal/ChallengeModal.styl
@@ -60,6 +60,16 @@
 
     }
 
+    .speed-warning {
+        i {
+            margin-right: 0.5em;
+        }
+        color: chocolate;
+        font-size: 0.8em;
+        text-align: center;
+        line-height: 1rem;
+    }
+
     // Place the invite-only-challenge-selector checkbox just below the "Create Challenge" button
     .invite-only-challenge-selector {
         justify-content: flex-end;
