Add display of "See also" info in OJE

--- a/src/views/Joseki/Joseki.styl
+++ b/src/views/Joseki/Joseki.styl
@@ -321,6 +321,11 @@
             .position-description {
                 flex-basis: 80%;
             }
+            .see-also-block {
+                a {
+                    margin-right: 0.8rem;
+                }
+            }
         }
 
         .position-tag {
