Moved turn indicator next to profile box
This is to help avoid misclicking into the search box, and it is
consistent with the original layout

--- a/src/components/NavBar/EXV6NavBar.styl
+++ b/src/components/NavBar/EXV6NavBar.styl
@@ -176,7 +176,8 @@ header.NavBar {
         .center {
             flex: 0rem;
         }
-        .TurnIndicator {
+        .spacer {
+            flex: 1;
             flex-basis: 2rem;
         }
         .TournamentIndicator.hidden-on-mobile {
@@ -496,7 +497,7 @@ header.NavBar {
         padding-right: 0.6rem;
     }
 
-    .TurnIndicator {
+    .spacer {
         width: auto;
     }
 
