--- a/src/components/NavBar/NavBar.styl
+++ b/src/components/NavBar/NavBar.styl
@@ -16,21 +16,298 @@
  */
 
 navbar-width= 18rem;
+submenu-min-height = 9rem;
+hamburger-cutoff = 900px;
 
-#NavBar {
+header.NavBar {
+    /body.zen & {
+        display: none;
+    }
+
     display: flex;
     margin-bottom: 0.2rem;
     height: navbar-height;
     user-select: none;
     themed background-color navbar-background-color
-
-    //transition: box-shadow 0.4s linear;
     box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.16);
-    /*
-    &.active {
-        box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.16);
+    justify-content: space-between;
+
+    .fa-star {
+        //themed color supporter-gold
+        color: supporter-gold;
     }
-    */
+    .left, .right {
+        flex: 1rem;
+        flex-grow: 0;
+        flex-shrink: 0;
+    }
+    .center {
+        flex: 1rem;
+        flex-grow: 1;
+        flex-shrink: 0;
+        flex-align: flex-start;
+    }
+
+    .mobile-only {
+        display: none !important;
+    }
+
+    /* desktop / wide screens */
+    @media (min-width: (hamburger-cutoff + 1px)) {
+
+        .Menu {
+            display: block;
+            margin-left: 0.5rem;
+            position: relative;
+            height: navbar-height;
+
+            .Menu-children {
+                display: none;
+                position: absolute;
+                left: 0;
+                top: navbar-height;
+                min-width: navbar-width;
+                themed background-color navbar-background-color
+                //border-left: 0.2rem solid transparent;
+                box-shadow: 2px 4px 3px 0px rgba(0, 0, 0, 0.16);
+                z-index: z.nav-menu.menu;
+
+            }
+
+            *:hover {
+                themed background-color shade4
+            }
+            
+            &:hover, &.active {
+                themed background-color navbar-highlight-background-color
+                themed border-color primary
+                .Menu-children {
+                    display: inline-flex;
+                    flex-direction: column;
+                    themed border-color primary
+                    themed background-color navbar-highlight-background-color
+                }
+            }
+
+            .submenu {
+                display: none;
+            }
+            .submenu-container:hover .submenu {
+                display: inline-flex;
+                flex-direction: column;
+                position: absolute;
+                top: 0;
+                min-height: submenu-min-height;
+                left: navbar-width;
+                themed background-color shade4
+                min-width: navbar-width;
+                box-shadow: 2px 4px 3px 0px rgba(0, 0, 0, 0.16);
+                > a {
+                    display: inline-flex;
+                    align-items: center;
+                }
+            }
+        }
+    }
+
+    @media only screen and (max-width: 600px) {
+        .FriendIndicator, .IncidentReportIndicator, .TournamentIndicator, .TurnIndicator, .NotificationIndicator, .ChatIndicator {
+            padding-left: 0.3rem !important;
+            padding-right: 0.3rem !important;
+        }
+    }
+
+
+    /* mobile */
+    @media only screen and (max-width: hamburger-cutoff) {
+        .left {
+            display: none !important;
+        }
+
+        .Menu.mobile-only {
+            display: flex !important;
+
+            img.PlayerIcon {
+                margin-left: 0.5rem;
+            }
+        }
+
+        .icon-container {
+            padding-right: 0 !important;
+            img.PlayerIcon {
+                margin-right: 0 !important;
+            }
+            .username {
+                display: none;
+            }
+        }
+        .ogs-nav-logo {
+            height: 1.5rem;
+            width: 4.0rem !important;
+            margin-right: 0 !important;
+        }
+        .OmniSearch-container {
+            //display: none !important;
+            display: inline-flex !important;
+            min-width: 2.0rem;
+            &:focus-within {
+                width: calc(100vw - 5rem) !important;
+                //min-width: calc(100vw - 10rem) !important;
+                max-width: auto;
+                margin-right: 0.5rem;
+                .OmniSearch-input-container {
+                    max-width: 100%;
+                }
+            }
+
+            .fa-search {
+                font-size: 1.2rem;
+            }
+        }
+        .right {
+            flex: 0rem;
+            &.search-focused {
+                display: none;
+                @media only screen {
+                    display: inline-flex;
+                }
+            }
+        }
+        .center {
+            flex: 0rem;
+        }
+        .spacer {
+            flex: 1;
+            flex-basis: 2rem;
+        }
+        .TournamentIndicator.hidden-on-mobile {
+            display: none;
+        }
+
+        &.hamburger-expanded {
+            .OmniSearch-container  {
+                display: inline-flex !important;
+            }
+            .ogs-nav-logo {
+                display: none;
+            }
+             .right {
+                display: none;
+            }
+        }
+
+        &.hamburger-expanded .left {
+            display: inline-flex !important;
+            flex-direction: column;
+            themed background-color navbar-background-color
+            position: absolute;
+            top: navbar-height
+            bottom: 0;
+            left: 0;
+            padding: 0;
+            align-items: flex-start;
+            //max-height: "calc(100vh - %s)" % navbar-height;
+            //overflow-y: auto;
+            z-index: z.nav-menu.menu;
+
+            .ogs-nav-logo {
+                display: none;
+            }
+
+            .Menu {
+                order: 2;
+                width: 100vw;
+                display: flex;
+                flex-direction: column;
+                height: auto;
+                themed-important background-color navbar-background-color
+
+            }
+
+            .Menu-title {
+                font-size: font-size-big
+                white-space: nowrap;
+            }
+
+            .Menu-children {
+                display: inline-flex;
+                flex-direction: column;
+                position: static;
+                display: inline-flex;
+                flex-direction: column;
+                box-shadow: none;
+                flex-shrink: 0;
+                themed-important background-color navbar-background-color
+                padding-left: 2rem;
+
+            }
+
+            .submenu-container {
+                display: flex;
+                flex-direction: column;
+
+                .submenu {
+                    flex-shrink: 0;
+                    display: inline-flex;
+                    flex-direction: column;
+                    position: static;
+                    box-shadow: none;
+                    min-height: auto !important;
+                    themed-important background-color navbar-background-color
+                    padding-left: 2rem;
+                }
+            }
+        }
+    }
+
+    @media only screen and (min-width: 528px) {
+        .right {
+            &.search-focused {
+                display: inline-flex !important;
+            }
+        }
+    }
+
+    .hamburger {
+        display: none;
+        cursor: pointer;
+        @media only screen and (max-width: hamburger-cutoff) {
+            font-size: 1.7rem;
+            display: inline-flex;
+            align-items: center;
+            padding-left: 0.5rem;
+
+            a {
+                display: inline-flex;
+                align-items: center;
+            }
+        }
+    }
+
+    .Menu {
+        img {
+            display: inline-block;
+            width: 16px;
+            height: 16px;
+            margin-right: 0.5rem;
+        }
+
+        .Menu-children {
+            .fa, .ogs-goban {
+                width: 16px;
+                max-width: 16px;
+                height: 16px;
+                text-align: center;
+                font-weight: 400;
+                margin-left: 0.5rem;
+                margin-right: 0.5rem;
+                &.fa-graduation-cap {
+                    font-size: 14px;
+                }
+            }
+        }
+    }
+
 
     a, .clickable, .fakelink {
         themed color text-color
@@ -41,38 +318,31 @@ navbar-width= 18rem;
         themed color text-color-active
     }
 
-
-    .ogs-nav-logo-container {
-        flex-shrink: 0;
-        flex-wrap: nowrap;
-        display: flex;
-        align-items: center;
-        align-content: center;
-        height: navbar-height;
-        padding-left: 0.5rem;
-        padding-right: 0.5rem;
+    .ogs-nav-logo {
+        height: 1.5rem;
+        width: 4rem;
         margin-right: 1rem;
-        cursor: pointer;
-
-        i.fa-bars {
-            font-size: 1.5rem;
-        }
     }
 
     .left {
-        flex-shrink: 1;
-        flex-grow: 1;
         display: flex;
-        flex-wrap: wrap;
         align-items: center;
-        a {
+        //padding-left: 1rem;
+        .Menu-title {
+            display: inline-flex;
+            line-height: navbar-height;
+            padding-left: 0.5rem;
+            padding-right: 0.5rem;
+            white-space: nowrap;
+            align-items: center;
+        }
+
+        a, .fakelink {
             display: inline-block;
             line-height: navbar-height;
             padding-left: 0.5rem;
             padding-right: 0.5rem;
-            margin-right: 0.5rem;
         }
-        overflow: hidden;
     }
 
     .right {
@@ -82,12 +352,15 @@ navbar-width= 18rem;
 
         .icon-container {
             display: flex;
-
             position: relative;
             padding-left: 0.5rem;
             padding-right: 0.7rem;
             cursor: pointer;
             align-items: center;
+
+            .username {
+                white-space: nowrap;
+            }
 
 
             .notification-indicator {
@@ -96,9 +369,12 @@ navbar-width= 18rem;
             }
 
             img.PlayerIcon {
-                height: navbar-height;
-                width: navbar-height;
+                //height: navbar-height;
+                //width: navbar-height;
+                height: 2rem;
+                width: 2rem;
                 pointer-events: none;
+                margin-right: 0.5rem;
             }
 
             .fa, .ogs-goban {
@@ -151,33 +427,20 @@ navbar-width= 18rem;
         }
     }
 
-    .rightnav, .leftnav {
+    .RightNav {
+        display: inline-flex;
+        flex-direction: column;
         position: absolute;
-        top: navbar-height;
-        themed background-color navbar-background-color;
-        z-index: z.nav-menu.menu;
-
-        user-select: none;
-        width: navbar-width;
-        max-width: 100%;
-    }
-
-    .leftnav > #items .fa {
-        margin-right: 4px;
-    }
-    .leftnav > #items .ogs-goban {
-        margin-right: 4px;
-        text-decoration: none !important;
-    }
-
-    .rightnav {
         right: 0;
-        display: none;
-
+        top: navbar-height;
+        width: navbar-width;
+        max-width: 100vw;
+        max-height: "calc(100vh - %s)" % navbar-height;
+        themed background-color navbar-background-color;
+        overflow-y: auto;
+        user-select: none;
+        z-index: z.nav-menu.menu;
         box-shadow: -2px 2px 1px 0px rgba(0, 0, 0, 0.16);
-        &.active {
-            display: inline-block;
-        }
 
         .NotificationList {
             margin-bottom: 1rem;
@@ -196,126 +459,142 @@ navbar-width= 18rem;
             display: flex;
             justify-content: space-around;
         }
-        .center {
-        }
-    }
 
-    .leftnav {
-        left: -18rem;
-        transition: left 0.4s ease, box-shadow 0.4s linear;
-        bottom: 0;
-        overflow-y: auto;
-
-
-        box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.16);
-        &.active {
-            left: 0;
-            box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.16);
-        }
-
-
-        ul {
-            display: inline-block;
-            list-style-type: none;
-            list-style: none;
-            padding: 0;
-            padding-left: 0.75em;
-            vertical-align: top;
-            width: 100%;
-        }
-
-        .invite {
-            padding-left: 0.5em;
+        a, .fakelink {
+            margin: 0.5rem;
+            display: inline-flex;
+            align-items: center;
             img, i {
-                //padding-bottom: 10px;
-                margin-top: 0.7em;
-                vertical-align: top;
-                padding-top: 0;
+                margin: 0.2rem;
+                margin-right: 0.5rem;
             }
-            a {
-                width: auto;
-            }
-        }
-
-
-        .search-row {
-            display: flex;
-            align-items: flex-end;
-        }
-
-        .OmniSearch-input {
-            width: (navbar-width - 3rem);
-            margin-right: 1.0rem;
-            margin-top: 1.0rem;
-        }
-
-        .fa-search {
-            themed color shade1;
-            margin-left: 0.8rem;
-            margin-top: 1rem;
-            margin-right: 0.2rem;
-            padding-bottom: 0.35rem;
-
-        }
-
-        .fa-check {
-            themed color primary;
-        }
-
-        .fa-times {
-            themed color reject;
-        }
-
-        :not(:hover) .fa-star {
-            color: supporter-gold;
-        }
-
-        ul.nav-items {
-            box-shadow: 2px 0px 2px 0px rgba(0, 0, 0, 0.16);
-        }
-
-        li {
-            list-style-type: none;
-            list-style: none;
-
-            a, span.fakelink {
-                display: block;
-                line-height: 2.0rem;
-                width: 100%;
-            }
-        }
-
-        li.divider {
-            padding: 0;
-            height: 1px !important;
-            margin: 0.7rem 0;
-            overflow: hidden;
-            themed background-color shade4
-        }
-
-        i {
-            themed color shade1;
-            width: 1.5rem;
-            text-align: center;
-
-            &.fa-moon-o, &.fa-sun-o {
-                themed color fg
-            }
-        }
-
-        a:hover i, .fakelink:hover i  {
-            themed color shade0
         }
     }
 
 
-    .FriendIndicator, .IncidentReportIndicator, .TournamentIndicator {
-        margin-bottom: -3px;
-        margin-top: 1px;
+    .NotificationList {
+        position: absolute;
+        right: 0;
+        top: navbar-height;
+        width: navbar-width;
+        themed background-color navbar-background-color
+        max-height: "calc(100vh - %s)" % navbar-height;
+        overflow-y: auto;
+        padding: 0.5rem;
+        z-index: z.nav-menu.menu;
+        box-shadow: -2px 2px 1px 0px rgba(0, 0, 0, 0.16);
     }
+
+
+    .FriendList {
+        top: navbar-height;
+        max-height: "calc(100vh - %s)" % navbar-height;
+        themed background-color navbar-background-color
+    }
+
+    .FriendIndicator, .IncidentReportIndicator, .TournamentIndicator, .TurnIndicator, .NotificationIndicator, .ChatIndicator {
+        padding-left: 0.6rem;
+        padding-right: 0.6rem;
+    }
+
+    .spacer {
+        width: auto;
+    }
+
+    .ChatIndicator {
+        display: inline-flex;
+        align-self: center;
+        line-height: 1rem;
+        .navbar-icon {
+            margin-bottom: 0px !important;
+        }
+    }
+
+    .FriendIndicator, .IncidentReportIndicator, .NotificationIndicator, .TournamentIndicator {
+        .count, .time {
+            // This offsets the baseline padding added to the count so things center correctly.
+            margin-bottom: -0.2rem;
+        }
+    }
+
+
+    .ChatList {
+        themed background-color navbar-highlight-background-color
+        padding: 0.5rem;
+        height: "calc(100vh - %s)" % navbar-height;
+        max-height: "calc(100vh - %s)" % navbar-height;
+        width: 15rem;
+        .channels {
+            margin-top: 0.5rem;
+        }
+        .channel {
+            padding-top: 0.25rem;
+            padding-bottom: 0.25rem;
+            height: 1.2rem;
+
+            .channel-name {
+                display: inline-flex;
+                align-items: center;
+                align-content: center;
+                .fa-trophy, .icon {
+                    margin-right: 0.5rem;
+                }
+            }
+        }
+    }
+
 }
 
+.OmniSearch-container {
+    position: relative;
+    height: navbar-height;
+    display: inline-flex;
+    align-items: center;
+    //justify-content: center;
+    padding-left: 0.5rem;
+    padding-bottom: 0;
+    flex-grow: 1;
+    flex-shrink: 0;
+    min-width: 7rem;
 
+    .OmniSearch-input-container {
+        display: inline-flex;
+        align-items: center;
+        flex: 1;
+        flex-shink: 1;
+        max-width: 20rem;
+        position: relative;
+    }
+
+    .fa-search {
+        margin-right: 0.3rem;
+        position: absolute;
+        left: 0.2rem;
+        cursor: pointer;
+    }
+
+    .OmniSearch-input {
+        flex: 1;
+        flex-shrink: 1;
+        width: 100%;
+        padding-left: 1.5rem;
+    }
+
+    .OmniSearch {
+        position: absolute;
+        //top: navbar-height;
+        //top: -0.15rem;
+        //top: 0;
+        top: navbar-height;
+        //left: navbar-width;
+
+        width: navbar-width;
+        themed background-color navbar-highlight-background-color
+        box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.16);
+        z-index: z.nav-menu.menu;
+        max-height: "calc(100vh - %s)" % navbar-height;
+    }
+}
 
 
 button.theme-button {
@@ -328,14 +607,14 @@ button.theme-button {
     font-size: 1.2rem;
 }
 
-body.light #NavBar button.theme-button.light {
+body.light header.NavBar button.theme-button.light {
     background-color: light.primary
     border-color: darken(light.primary, 8%)
     i.fa.fa-sun-o {
         color: #fff;
     }
 }
-body.dark #NavBar button.theme-button.dark {
+body.dark header.NavBar button.theme-button.dark {
     background-color: dark.primary
     border-color: darken(dark.primary, 8%)
     i.fa.fa-moon-o {
@@ -343,12 +622,8 @@ body.dark #NavBar button.theme-button.dark {
     }
 }
 
-body.zen #NavBar & {
-    display: none;
-}
-
 // do for accessible what we do for dark...
-body.accessible #NavBar button.theme-button.accessible {
+body.accessible header.NavBar button.theme-button.accessible {
     background-color: accessible.primary
     border-color: darken(accessible.primary, 8%)
     i.fa.fa-eye {
@@ -356,26 +631,4 @@ body.accessible #NavBar button.theme-button.accessible {
     }
 }
 
-.OmniSearch-results {
-    padding: 0.5rem;
-
-    img {
-        width: 15px;
-        height: 15px;
-    }
-
-    .loading, .no-results {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        text-align: center;
-        themed color shade3;
-        padding-top: 5rem;
-    }
-    .no-results {
-        font-weight: bold;
-        themed color fg;
-    }
-}
 
