Active game list on overview should fill screen width

--- a/src/views/Overview/EXV6Overview.styl
+++ b/src/views/Overview/EXV6Overview.styl
@@ -43,6 +43,7 @@
     .active-games {
         flex-grow: 1;
         flex-basis: 20rem;
+        width: 100%;
         max-width: 100%;
         align-self: center;
     }
