Allow assignment of other moderators to a report

--- a/src/views/ReportsCenter/ReportsCenter.styl
+++ b/src/views/ReportsCenter/ReportsCenter.styl
@@ -10,6 +10,16 @@
         box-shadow: none;
     }
 
+    #ReportsCenterSelectModerator  {
+        display: inline-block;
+        width: 12rem;
+        .reports-center-assigned-moderator-container {
+            display: inline-flex;
+            align-items: center;
+
+        }
+    }
+
     #leave-moderator-note {
         textarea#moderator-note {
             width: 100%;
