Ground work for report center history/settings pages

--- a/src/views/ReportsCenter/ReportsCenter.styl
+++ b/src/views/ReportsCenter/ReportsCenter.styl
@@ -147,6 +147,11 @@
         justify-content: space-between;
         align-items: center;
 
+        &:hover {
+            themed background-color shade5
+            themed color colored-background-fg
+        }
+
         &.selected {
             themed background-color primary
             themed color colored-background-fg
