--- a/src/views/ReportsCenter/SelectedReport.styl
+++ b/src/views/ReportsCenter/SelectedReport.styl
@@ -46,4 +46,11 @@
 
     .translated {
     }
+
+    .no-report-selected {
+        text-align: center;
+        margin-top: 10rem;
+        margin-bottom: 1rem;
+        font-size: 3rem;
+    }
 }
