Close the nav bar hover menus when we click something

--- a/src/components/NavBar/NavBar.styl
+++ b/src/components/NavBar/NavBar.styl
@@ -54,6 +54,12 @@ header.NavBar {
         display: none !important;
     }
 
+    &.force-nav-close {
+        .Menu-children {
+            display: none !important;
+        }
+    }
+
     /* desktop / wide screens */
     @media (min-width: (hamburger-cutoff + 1px)) {
 
