Increased font size on portrait mode.

--- a/src/views/Game/Players.styl
+++ b/src/views/Game/Players.styl
@@ -389,12 +389,12 @@
 
     .Clock {
         .main-time {
-            font-size: font-size-small;
+            font-size: 1.2em;
         }
         .byo-yomi-container,
         .canadian-container
         {
-            font-size: font-size-extra-small;
+            font-size: 0.8 * 1.2em;
         }
     }
 }
