Use a smaller clock font when we have a really long main time string

--- a/src/views/Game/Players.styl
+++ b/src/views/Game/Players.styl
@@ -390,6 +390,9 @@
     .Clock {
         .main-time {
             font-size: 1.2em;
+            &.small {
+                font-size: font-size-small;
+            }
         }
         .byo-yomi-container,
         .canadian-container
