--- a/src/views/Game/PlayerCards.styl
+++ b/src/views/Game/PlayerCards.styl
@@ -3,3 +3,10 @@
         color: #FF8B00;
     }
 }
+.next-game-arrows {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 0.5rem 0 0.5rem;
+    align-items: center;
+}
