Tweak to kick off uffizzi again

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -126,7 +126,7 @@ accessible.clear = transparent
 /*************/
 
 //light.bg                                = #f0f0f0
-light.bg                                = #8f8
+light.bg                                = #afa
 light.fg                                = #202020
 light.fg-increased-contrast             = #000000
 light.mix-base                          = #999
