Made next/prev game arrows have the pointer cursor

--- a/src/views/Game/PlayerCards.styl
+++ b/src/views/Game/PlayerCards.styl
@@ -9,4 +9,8 @@
     justify-content: space-between;
     margin: 0 0.5rem 0 0.5rem;
     align-items: center;
+
+    .fa {
+        cursor: pointer;
+    }
 }
