--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -126,7 +126,7 @@ accessible.clear = transparent
 /*************/
 
 //light.bg                                = #f0f0f0
-light.bg                                = #cfc
+light.bg                                = #cff
 light.fg                                = #202020
 light.fg-increased-contrast             = #000000
 light.mix-base                          = #999
@@ -274,7 +274,7 @@ light.player-white-paused-clock          = #928A99;
 /************/
 core-color-darken-amount = 20%
 
-dark.bg                                 = #1a441a
+dark.bg                                 = #1a4444
 dark.fg                                 = #bbbbbb
 dark.fg-increased-contrast              = #ffffff
 dark.mix-base                           = #777
