--- a/src/views/OnlineLeagueLanding/OnlineLeagueLanding.styl
+++ b/src/views/OnlineLeagueLanding/OnlineLeagueLanding.styl
@@ -37,4 +37,17 @@
     div {
         margin-bottom: 2rem;
     }
+
+    .unstarted-match {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+
+        .waiting-chat {
+            width: 80%;
+            max-height: 20rem;
+            overflow-y: scroll;
+        }
+    }
 }
