Give OOL Landing page some Dynamic Help, and improve layout of it.

--- a/src/views/OnlineLeagueLanding/OnlineLeagueLanding.styl
+++ b/src/views/OnlineLeagueLanding/OnlineLeagueLanding.styl
@@ -34,8 +34,12 @@
         }
      }
 
-    div {
+    .match-detail {
         margin-bottom: 2rem;
+    }
+
+    .waiting-chat {
+
     }
 
     .unstarted-match {
@@ -46,8 +50,14 @@
 
         .waiting-chat {
             width: 80%;
+            max-width: 100rem;
             max-height: 20rem;
+            margin-bottom: 1rem;
             overflow-y: scroll;
+
+            .EmbeddedChatCard {
+                min-height: 4rem;
+            }
         }
     }
 }
