--- a/src/views/OnlineLeagueSpectatorLanding/OnlineLeagueSpectatorLanding.styl
+++ b/src/views/OnlineLeagueSpectatorLanding/OnlineLeagueSpectatorLanding.styl
@@ -16,48 +16,21 @@
  */
 
 
-#OnlineLeagueLanding {
+#OnlineLeagueSpectatorLanding {
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    .login-options {
-        display: grid;
-        grid-template-columns: 1fr 0.4fr;
-        h3 {
-            grid-column: 1/span 2;
-        }
-        span {
-            justify-self: end;
-            align-self: center;
-            padding-right: 0.5rem;
-        }
-     }
-
-    .match-detail {
-        margin-bottom: 2rem;
-    }
-
-    .waiting-chat {
-
-    }
 
     .unstarted-match {
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 100%;
-
-        .waiting-chat {
-            width: 80%;
-            max-width: 100rem;
-            max-height: 20rem;
-            margin-bottom: 1rem;
-            overflow-y: scroll;
-
-            .EmbeddedChatCard {
-                min-height: 4rem;
-            }
+        div {
+            margin-bottom: 2rem;
         }
+    }
+
+    .membership-drive{
+        margin-top: 3rem;
     }
 }
