shorthand for a line

--- a/src/views/PuzzleList/PuzzleList.styl
+++ b/src/views/PuzzleList/PuzzleList.styl
@@ -41,8 +41,7 @@
     .MiniGoban {
         height: 64px;
         width: 64px;
-        margin-top: 0.4rem;
-        margin-bottom: -0.6rem;
+        margin: 0.4rem 0 -0.6rem;
         overflow: visible;
 
         .inner-container {
