added missing semicolon

--- a/src/views/PuzzleList/PuzzleList.styl
+++ b/src/views/PuzzleList/PuzzleList.styl
@@ -46,7 +46,7 @@
         height: 0;
         width: 64px;
         margin-top: 20px;
-        transform: translateY(20px)
+        transform: translateY(20px);
         overflow: visible;
         background-color: red;
 
