added clickable correct button for Puzzle component

--- a/src/views/Puzzle/Puzzle.styl
+++ b/src/views/Puzzle/Puzzle.styl
@@ -128,6 +128,8 @@ puzzle-controls-width=400px
         .success {
             themed background-color success
             themed color colored-background-fg
+            display: block;
+            text-decoration: none;
         }
         .incorrect {
             themed background-color reject
