Fix game name display in InviteList

--- a/src/views/Overview/InviteList.styl
+++ b/src/views/Overview/InviteList.styl
@@ -40,9 +40,12 @@
                 flex-grow: 1;
                 display: flex;
                 align-items: center;
+                min-width: 0;
 
                 h4 {
                     margin: 0 0.3rem 0 0;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
             }
 
