Adjust Responsive css and translation strings
css for different devices, translation strings for the table.

--- a/src/views/RatingCalculator/RatingCalculator.styl
+++ b/src/views/RatingCalculator/RatingCalculator.styl
@@ -6,7 +6,8 @@
     align-items: center;
 }
 
-#Rating-Table-Div {
+#Rating-Table-Div input {
+    width:100%;
 }
 
 td {
@@ -14,5 +15,5 @@ td {
 } 
 
 th, td {
-    padding: 15px;
+    padding: 10px;
 }
