Handicaps and styling
Add ability to compute handicap games, and additional table styling.

--- a/src/views/RatingCalculator/RatingCalculator.styl
+++ b/src/views/RatingCalculator/RatingCalculator.styl
@@ -1,5 +1,6 @@
 #Rating-Calculator-Container {
     display: flex;
+    flex-direction: column;
     border: 3px solid green;
     padding: 10px;
     justify-content: center; 
@@ -8,6 +9,10 @@
 
 #Rating-Table-Div input {
     width:100%;
+}
+
+#Rating-Table-Div #handicap-picker {
+    width:30%;
 }
 
 td {
