--- a/src/views/RatingCalculator/RatingCalculator.styl
+++ b/src/views/RatingCalculator/RatingCalculator.styl
@@ -1,7 +1,6 @@
 #Rating-Calculator-Container {
     display: flex;
     flex-direction: column;
-    border: 3px solid green;
     padding: 10px;
     justify-content: center; 
     align-items: center;
@@ -15,10 +14,18 @@
     width:30%;
 }
 
-td {
+#player-auto-entries {
+    display: flex;
+}
+
+#player-auto-entries input {
+    width:30%;
+}
+
+#Rating-Table-Div td {
     text-align: center;
 } 
 
-th, td {
+#Rating-Table-Div th, #Rating-Table-Div td {
     padding: 10px;
 }
