--- a/src/views/RatingCalculator/RatingCalculator.styl
+++ b/src/views/RatingCalculator/RatingCalculator.styl
@@ -29,3 +29,20 @@
 #Rating-Table-Div th, #Rating-Table-Div td {
     padding: 10px;
 }
+
+.rating-rable-row-header {
+    border-bottom: 1px solid;
+    border-top: 1px solid;
+}
+
+.rating-table-divider {
+    border-right: 1px solid;
+}
+
+.rating-table-divider-horizontal {
+    border-bottom: 1px solid;
+}
+
+.rating-table {
+    border-collapse: collapse;    
+}
