--- a/src/views/RatingCalculator/RatingCalculator.styl
+++ b/src/views/RatingCalculator/RatingCalculator.styl
@@ -1,48 +1,78 @@
-#Rating-Calculator-Container {
+#RatingCalculator {
     display: flex;
     flex-direction: column;
     padding: 10px;
     justify-content: center; 
     align-items: center;
-}
 
-#Rating-Table-Div input {
-    width:100%;
-}
+    #Rating-Table-Div {
+        table { 
+            max-width: 100vw;
+        }
 
-#Rating-Table-Div #handicap-picker {
-    width:30%;
-}
 
-#player-auto-entries {
-    display: flex;
-}
+        input {
+            width: 7rem;
+            text-align: center;
+        }
 
-#player-auto-entries input {
-    width:30%;
-}
+        #handicap-picker {
+            width: 30%;
+        }
 
-#Rating-Table-Div td {
-    text-align: center;
-} 
+        td {
+            text-align: center;
+            padding: 1rem;
+            padding-left: 2rem;
+            padding-right: 2rem;
+            width: 12rem;
+            min-width: 12rem;
+        } 
+        @media (max-width: 700px) {
+            td {
+                padding: 1rem;
+                padding-left: 1rem;
+                padding-right: 1rem;
+                min-width: 6rem;
 
-#Rating-Table-Div th, #Rating-Table-Div td {
-    padding: 10px;
-}
+            }
+        }
 
-.rating-rable-row-header {
-    border-bottom: 1px solid;
-    border-top: 1px solid;
-}
+        th, td {
+            padding: 10px;
+        }
 
-.rating-table-divider {
-    border-right: 1px solid;
-}
+        th {
+            text-align: left;
+        }
+    }
 
-.rating-table-divider-horizontal {
-    border-bottom: 1px solid;
-}
+    #player-auto-entries {
+        display: flex;
 
-.rating-table {
-    border-collapse: collapse;    
+        input {
+            width: 30%;
+        }
+
+    }
+
+    .rating-table-divider {
+        border-right: 1px solid;
+        themed border-color shade3
+    }
+
+    .rating-table {
+        border-collapse: collapse;    
+    }
+
+    h3 {
+        text-align: left;
+        margin-bottom: 0;
+        margin-top: 1rem;
+    }
+
+    h2 {
+        text-align: center;
+        margin-bottom: 0.5rem;
+    }
 }
