Add banned indicator instead of forcing players to /appeals

--- a/src/components/NavBar/NavBar.styl
+++ b/src/components/NavBar/NavBar.styl
@@ -724,3 +724,21 @@ body.accessible header.NavBar button.theme-button.accessible {
 }
 
 
+.BanIndicator {
+    position: fixed;
+    right: 0;
+    top: navbar-height;
+    themed background-color reject
+    z-index: z.banned-banner;
+    width: 15rem;
+    themed color colored-background-fg
+    padding: 1rem;
+     > div {
+         font-size: 1.2rem;
+         text-align: center;
+         padding-top: 1.0rem;
+         a {
+             themed color link-color
+         }
+     }
+}
