--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -63,6 +63,7 @@ z = {
         challenge-list : 150,
     }
     dock               : 150,
+    banned-banner      : 151,
     private-chat       : 153,
     incident-list      : 155,
     omnisearch         : 160,
