Disable tournament invite for guests

--- a/src/components/PlayerAutocomplete/PlayerAutocomplete.styl
+++ b/src/components/PlayerAutocomplete/PlayerAutocomplete.styl
@@ -24,4 +24,8 @@
         themed color text-color;
         text-align: left;
     }
+
+    input:disabled {
+        cursor: not-allowed;
+    }
 }
