Add support for wsc2023 achievement

--- a/src/components/Achievements/AchievementList.styl
+++ b/src/components/Achievements/AchievementList.styl
@@ -45,7 +45,7 @@
         }
     }
 
-    &.wdc2021, &.wsc2022 {
+    &.wdc2021, &.wsc2022, &.wsc2023 {
         .icon {
             background-image: url('/achievements/wdc2021.png');
         }
