Dolphin trophy for Sofia

--- a/src/views/User/User.styl
+++ b/src/views/User/User.styl
@@ -554,6 +554,15 @@
         text-align: center;
         max-width: 100%;
     }
+    .Dolphin-trophy {
+        img {
+            width: 300px;
+            height: 300px;
+        }
+
+        text-align: center;
+        max-width: 100%;
+    }
 
 
     .SelfReportedAccountLinkages {
