Add account warning support

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -90,6 +90,7 @@ z = {
 
     dynamic-help       : 20000,  // Help popups would like to go on top of everthing
 
+    account-warning    : 50003,  
     superchat-modal    : 50005,
     superchat          : 50010,
 }
@@ -164,6 +165,7 @@ light.chart-area                        = #E6F6FE
 light.chart-line                        = #184A6B
 light.error-boundary-bg                 = lighten(light.reject, 50%)
 light.error-boundary-fg                 = darken(light.reject, 50%)
+light.warning-bg                        = #FFAE2C
 
 
 //light.help-popup-bg                     = #D471DA
@@ -307,6 +309,7 @@ dark.chart-area                         = #092D3E
 dark.chart-line                         = #329BE0
 dark.error-boundary-bg                  = darken(light.reject, 50%)
 dark.error-boundary-fg                  = lighten(light.reject, 50%)
+dark.warning-bg                         = #925A00
 
 //dark.help-popup-bg                     = #4E134C
 dark.help-popup-bg                      = dark.primary
