--- a/src/views/ReportsCenter/ViewReport.styl
+++ b/src/views/ReportsCenter/ViewReport.styl
@@ -76,6 +76,16 @@
             margin-right: 0;
         }
     }
+
+    .message-templates {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+        button {
+            margin-left: 0;
+            margin-right: 0;
+        }
+    }
 }
 
 @media (max-width: 767px) {
