Added undo-harrasment warning, and formatted warnings to allow for paragraphs

--- a/src/components/AccountWarning/AccountWarning.styl
+++ b/src/components/AccountWarning/AccountWarning.styl
@@ -55,6 +55,7 @@
     .AutoTranslate {
         font-size: 1.5rem;
         text-align: center;
+        white-space: pre-line; // we have paragraphs in warning messages :)
     }
 
     .space  {
