--- a/src/components/AccountWarning/AccountWarning.styl
+++ b/src/components/AccountWarning/AccountWarning.styl
@@ -56,6 +56,7 @@
         font-size: 1.5rem;
         text-align: center;
         white-space: pre-line; // we have paragraphs in warning messages :)
+        line-height: 1;  // We have lots to say, not so much room to say in :)
     }
 
     .space  {
