Switch to markdown for warnings; don't show warning on ToS page

--- a/src/components/AccountWarning/AccountWarning.styl
+++ b/src/components/AccountWarning/AccountWarning.styl
@@ -55,11 +55,13 @@
     .AutoTranslate {
         font-size: 1.5rem;
         text-align: justify-content;
-        white-space: pre-line;
         line-height: 1;
         overflow: auto;
         padding: 0;
         margin: 0;
+
+        p:first-child {
+        }
     }
 
     .space  {
