--- a/src/components/AccountWarning/AccountWarning.styl
+++ b/src/components/AccountWarning/AccountWarning.styl
@@ -75,6 +75,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        user-select: none;
     }
 
     button {
