Underline bold text in warnings

--- a/src/components/AccountWarning/AccountWarning.styl
+++ b/src/components/AccountWarning/AccountWarning.styl
@@ -60,7 +60,9 @@
         padding: 0;
         margin: 0;
 
-        p:first-child {
+
+        strong {
+            text-decoration: underline;
         }
     }
 
