Support for GPT IR response suggestions

--- a/src/views/ReportsCenter/ViewReport.styl
+++ b/src/views/ReportsCenter/ViewReport.styl
@@ -77,6 +77,13 @@
         }
     }
 
+    .automod-analysis {
+        margin-bottom: 1rem;
+        .analysis {
+            font-style: italic;
+        }
+    }
+
     .message-templates {
         display: flex;
         justify-content: space-between;
