--- a/src/views/ReportsCenter/MessageTemplate.styl
+++ b/src/views/ReportsCenter/MessageTemplate.styl
@@ -1,10 +1,11 @@
 .MessageTemplate {
     display: inline-flex;
     flex-direction: column;
-
-    select {
-        margin-left: 1rem;
+    width: 49%;
+    @media only screen and (max-width: 767px) {
+        width: 100%;
     }
+
 
     textarea {
         min-height: 10rem;
@@ -17,7 +18,37 @@
         justify-content: space-between;
     }
 
-    .clear {
-        margin-left: 1rem !important;
+    h3 {
+        margin-bottom: 0.5rem;
     }
+
+    .top {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 1rem;
+
+
+        select {
+        }
+
+        .clear {
+            margin-left: 1rem !important;
+        }
+
+        .log {
+            display: inline-flex;
+            flex-direction: column;
+            align-items: center;
+            user-select: none;
+            cursor: pointer;
+        }
+
+        label { 
+            cursor: pointer;
+        }
+    }
+
+
 }
