--- a/src/views/ReportsCenter/ViewReport.styl
+++ b/src/views/ReportsCenter/ViewReport.styl
@@ -88,6 +88,7 @@
         display: flex;
         justify-content: space-between;
         margin-bottom: 1rem;
+        flex-wrap: wrap;
         button {
             margin-left: 0;
             margin-right: 0;
