Add admin only tournament setting to group edit page (and tweak save button)

--- a/src/views/Group/Group.styl
+++ b/src/views/Group/Group.styl
@@ -30,7 +30,6 @@
         .fa-picture-o:hover {
             themed color shade2
         }
-        
     }
     .admins {
         margin-bottom: 1rem;
@@ -45,6 +44,7 @@
         top: 1rem;
         right: 1rem;
         cursor: pointer;
+        padding-left: 1rem;
     }
 
     .Dropzone {
