--- a/src/components/AnnulQueueModal/AnnulQueueModal.styl
+++ b/src/components/AnnulQueueModal/AnnulQueueModal.styl
@@ -23,7 +23,8 @@
         top: 0px;
         left: 0px;
         bottom: 0px;
-        border-right: 1px solid white;
+        border-right: 1px solid transparent;
+        themed border-color shade3;
         overflow-y: scroll;
         overflow-x: hidden;
         overscroll-behavior: contain;
@@ -39,13 +40,12 @@
     .game-container {
         width: 85%;
         height: 90%;
-        
+
         float: right;
         position: absolute;
         top: 0px;
         right: 0px;
         overflow-y: scroll;
-
     }
 
     .game {
@@ -72,10 +72,8 @@
     }
 
     #move-tree-container {
-        height: 2rem;
+        height: 3rem;
     }
-
-
 
     .button-bar {
         display: flex;
@@ -106,8 +104,6 @@
         padding: 0;
         margin: 0;
 
-        themed border-color danger
-        
         li {
             width: 100%;
             padding: 5px;
@@ -118,13 +114,62 @@
             }
 
             &.selected {
-                background-color: #2196F3; 
-                color: #ffffff; 
+                background-color: #2196f3;
+                color: #ffffff;
 
                 &.strikethrough {
                     color: #bbb;
                 }
             }
         }
+    }
+
+    .AnnulPopover {
+        // position: absolute;
+        // top: 0;
+        // left: 0;
+        // right: 0;
+        // bottom: 0;
+        min-height: 100%;
+        min-width: 100%;
+        height: 100%;
+    }
+
+    .overlay {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        themed background-color bg
+    }
+
+    .spinner-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        // background-color: rgba(255, 255, 255, 0.9);
+        padding: 10px;
+        border-radius: 5px;
+    }
+
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+
+    .spinner {
+        border: 4px solid rgba(0, 0, 0, 0.1);
+        border-left-color: #777;
+        border-radius: 50%;
+        width: 24px;
+        height: 24px;
+        animation: spin 1s linear infinite;
+        margin-bottom: 5px;
     }
 }
