add filter for reporting user to report history table

--- a/src/views/ReportsCenter/ReportsCenterHistory.styl
+++ b/src/views/ReportsCenter/ReportsCenterHistory.styl
@@ -4,4 +4,23 @@
     td, th {
         padding-right: 0.5rem;
     }
+
+    .history-options {
+        display: flex;
+        justify-content: space-between;
+        align-items: self-start;
+        width: 100%;
+    }
+
+    .search {
+        display: flex;
+        align-items: flex-end;
+    }
+
+    .search i {
+        font-size: smaller;
+        margin-left: 1rem;
+        padding-right: 0.25rem;
+        padding-bottom: 0.4em;
+    }
 }
