reposition search bar

--- a/src/views/ReportsCenter/ReportsCenterHistory.styl
+++ b/src/views/ReportsCenter/ReportsCenterHistory.styl
@@ -7,9 +7,10 @@
 
     .history-options {
         display: flex;
-        justify-content: space-between;
-        align-items: self-start;
+        justify-content: flex-end;
+        align-items: end;
         width: 100%;
+        margin-bottom: 10px;
     }
 
     .search {
