Refactor Dock.styl to allow for Tooltips around dock elements

--- a/src/components/Dock/Dock.styl
+++ b/src/components/Dock/Dock.styl
@@ -85,13 +85,8 @@ dock-inline-height=500px
     }
 }
 
-// make the elements in the Dock line up properly in mobile mode
-// (doesn't affect full screen Dock because that isn't flex)
-.Dock > * {
-    flex-grow: 1;
-    flex-shrink: 0;
-    flex-basis: 30%;
-}
+
+// This is mobile layout...
 
 .Dock.inline {
     position: relative;
@@ -103,15 +98,20 @@ dock-inline-height=500px
 
     flex-wrap: wrap;
 
-    > a {
-        font-size: 0.7rem;
+
+    // The immediate children need to be laid out this way
+    > * {
         flex-grow: 1;
         flex-shrink: 0;
         flex-basis: 30%;
+    }
+    // And the links within them this way...
+    * a {
         text-align: left;
         display: flex;
         min-width: 7rem;
         align-items: center;
+        font-size: 0.7rem;
         i {
             font-size: 1.0rem;
         }
@@ -135,6 +135,7 @@ dock-inline-height=500px
     }
 }
 
+// This is wierd devices that are very short...
 @media (max-height: dock-inline-height) {
     .Dock {
         position: relative;
@@ -146,15 +147,19 @@ dock-inline-height=500px
 
         flex-wrap: wrap;
 
-        > a {
-            font-size: 0.7rem;
+        // The immediate children need to be laid out this way
+        > * {
             flex-grow: 1;
             flex-shrink: 0;
             flex-basis: 30%;
+        }
+        // And the links within them this way...
+        * a {
             text-align: left;
             display: flex;
             min-width: 7rem;
             align-items: center;
+            font-size: 0.7rem;
             i {
                 font-size: 1.0rem;
             }
