Add banner to let folks know if any payment problems

--- a/src/views/Settings/Settings.styl
+++ b/src/views/Settings/Settings.styl
@@ -77,6 +77,12 @@
         font-size: 0.8em;
     }
 
+    .fa-star {
+        color: supporter-gold;
+        margin-left: 0.3rem;
+        margin-right: 0.3rem;
+    }
+
     .vacation-status {
     }
 
@@ -336,6 +342,11 @@
                 max-width: 100vw;
             }
         }
+    }
+
+    .Supporter .SiteSupporterText p {
+        margin-top: 0;
+        padding-top: 0;
     }
 }
 
