Put the margin in the right place.

--- a/src/views/Firewall/Firewall.styl
+++ b/src/views/Firewall/Firewall.styl
@@ -29,7 +29,7 @@
 
         .notes {
             flex-grow: 2; // ensure the notes have as much room as possible
-            margin-left: 5rem;  // A slightly hacky way to stop it bumping into the owner in an ugly way
+            margin-right: 5rem;  // A slightly hacky way to stop it bumping into the owner in an ugly way
         }
     }
 
