Highlight minute timings in the GameTimings table so stalling is easier to spot

--- a/src/views/Game/GameTimings.styl
+++ b/src/views/Game/GameTimings.styl
@@ -35,6 +35,9 @@
         padding-bottom: 0.3em;
     }
 
+    .timing-slow-live {
+        themed background-color shade4;
+    }
 
     .span-2 {
         grid-column: span 2;
