Mini automatch update
adds correspondence + computer buttons with a link to the play page.

Tried to simplify the computer challenge options on the home page by taking out all the time controls

--- a/src/views/Overview/Overview.styl
+++ b/src/views/Overview/Overview.styl
@@ -189,10 +189,13 @@
 /* from play.styl */
 
 .automatch-container {
-        flex: 1;
+        flex-grow: 1;
+        flex-basis: 20rem;
         display: flex;
+        max-height: 80vh;
         flex-direction: column;
-        align-items: stretch;
+        align-items: center;
+        justify-content: center;
 
         .small-spinner {
             width: 20px;
